<resources>
    <string name="app_name">ProjOne</string>
    <string name="title_activity_panier">Panier</string>
    <string name="title_activity_liste_produits">Produits</string>
    <string name="title_activity_detail_produit">Détailles</string>
    <string name="title_activity_liste_commandes">Commandes</string>
    <string name="title_activity_main">GYZ Shop</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="section_format">Catégorie : %1$d</string>
    <string name="notifications_active">Notifications activées</string>
    <string name="notifications_off">Notifications désactivées</string>
    <string name="register">Créer un compte</string>
    <string name="login">S\'authentifier</string>
    <string name="commandes_track">Suivre commandes</string>
    <string name="settings">Paramétres</string>

    <string name="textTaille">Taille :</string>
    <string name="textQuantite">Quantite :</string>
    <string name="textDescription">Description :</string>
    <string name="textContenu">Contenu :</string>
    <string name="textCouleur">couleur</string>
    <string name="textPointure">Pointure</string>
    <string name="ajoutePanier">Ajouter au panier</string>
    <string name="textSuggestion">Vous Serez interessés par :</string>
    <string name="textDeviseAlgerien"> DA</string>
</resources>
