<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/notifications_active"/>


    </group>

    <item android:title="Compte">
        <menu>
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_assignment_ind_black_24dp"
                android:title="@string/register" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_verified_user_black_24dp"
                android:title="@string/login" />
            <item
                android:id="@+id/nav_suivi"
                android:icon="@drawable/ic_track_changes_black_24dp"
                android:title="@string/commandes_track" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />

        </menu>
    </item>

</menu>
