<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bouttonAjouter"
        android:layout_alignParentBottom="true"
        android:text="@string/ajoutePanier"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_above="@id/bouttonAjouter">
        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="dz.esi.activities.DetailActivity">

            <ImageView
                android:src="@drawable/ic_agilecovrer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/coverImage"
                android:layout_alignParentTop="true" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/coverImage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutPrix"
                android:layout_below="@id/ratingBar"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textNom"
                    android:paddingRight="50dp"
                    android:layout_weight="1"
                    android:text=" jean leavis  slim edition 511" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textPrix"
                    android:layout_weight="0"
                    android:text="70$" />
            </LinearLayout>






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutTaille"
                android:layout_below="@id/layoutPrix"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTaille"
                    android:text="@string/textTaille"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinTaille"
                    android:layout_toRightOf="@id/textTaille"
                    android:layout_alignParentRight="true"
                    android:layout_weight="0" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutCouleur"
                android:layout_below="@id/layoutTaille"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textCouleur"
                    android:text="@string/textCouleur"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinCouleur"
                    android:layout_toRightOf="@id/textTaille"
                    android:layout_alignParentRight="true"
                    android:layout_weight="0" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutQuantite"
                android:orientation="horizontal"
                android:layout_below="@id/layoutCouleur">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textQuantite"
                    android:text="@string/textQuantite"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editQuantite"
                    android:layout_alignParentRight="true"
                    android:inputType="numberSigned"
                    android:contentDescription="1"
                    android:layout_weight="0"/>


            </LinearLayout>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textDescription"
                android:text="Description :"
                android:layout_marginTop="15dp"
                android:layout_below="@id/layoutQuantite"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textContenu"
                android:layout_below="@+id/textDescription"
                android:layout_marginBottom="15dp"
                android:text="mlqskdmlqkdmlqkdmlqskdmlqksmldmlsqdqsdfdsfqsd sqdfsdf qsdf dgsd fqs dsq sdqg sdfsdf gqF DG DSQF G"
                />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textSuggestion"
                android:layout_below="@id/textContenu"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textSuggestion"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/suggestion1"
                    android:src="@drawable/ic_agile"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/suggestion2"
                    android:src="@drawable/ic_androidfdcover"
                    android:layout_weight="1"
                    />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/suggestion3"
                    android:layout_weight="1"
                    android:src="@drawable/ic_objectivecover"
                    />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>